force-app/main/default/objects/Customer_Service_Feedback__c/Customer_Service_Feedback__c.object-meta.xml
<CustomObject>
    <label>Customer Service Feedback</label>
    <nameField>
        <label>Customer Service Feedback Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Service Feedbacks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>