force-app/main/default/objects/Customer_Service_Feedback__c/fields/Agent_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Agent_Last_Name__c</fullName>
    <label>Agent Last Name</label>
    <length>230</length>
    <type>Text</type>
</CustomField>