force-app/main/default/objects/Customer_Service_Feedback__c/fields/Agent_Login__c.field-meta.xml
<CustomField>
    <fullName>Agent_Login__c</fullName>
    <label>Agent Login</label>
    <length>255</length>
    <type>Text</type>
</CustomField>