force-app/main/default/objects/Customer_Service_Feedback__c/fields/Over_All_Rating__c.field-meta.xml
<CustomField>
    <fullName>Over_All_Rating__c</fullName>
    <formula>CASE(Communication_Clarity__c,
&quot;1&quot;,1,
&quot;2&quot;,2,
&quot;3&quot;,3,
&quot;4&quot;,4,
&quot;5&quot;,5,
0
)
+
CASE(Overall_Satisfaction__c,
&quot;1&quot;,1,
&quot;2&quot;,2,
&quot;3&quot;,3,
&quot;4&quot;,4,
&quot;5&quot;,5,
0
)
+
CASE(Recommendation__c,
&quot;1&quot;,1,
&quot;2&quot;,2,
&quot;3&quot;,3,
&quot;4&quot;,4,
&quot;5&quot;,5,
0
)
+
CASE(Resolution_Quality__c,
&quot;1&quot;,1,
&quot;2&quot;,2,
&quot;3&quot;,3,
&quot;4&quot;,4,
&quot;5&quot;,5,
0
)
+
CASE(Responsiveness_Turnaround_Time__c,
&quot;1&quot;,1,
&quot;2&quot;,2,
&quot;3&quot;,3,
&quot;4&quot;,4,
&quot;5&quot;,5,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Over All Rating</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>