force-app/main/default/objects/Customer_Service_Feedback__c/fields/Responsiveness_Turnaround_Time__c.field-meta.xml
<CustomField>
    <fullName>Responsiveness_Turnaround_Time__c</fullName>
    <label>Responsiveness &amp; Turnaround Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>